@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- *  Copyright © 2023, Alps BTE <bte.atchli@gmail.com>
+ *  Copyright © 2025, Alps BTE <bte.atchli@gmail.com>
  *
  *  Permission is hereby granted, free of charge, to any person obtaining a copy
  *  of this software and associated documentation files (the "Software"), to deal
@@ -24,9 +24,9 @@
 
 package com.alpsbte.plotsystem.core.system.tutorial;
 
-import com.alpsbte.plotsystem.core.holograms.connector.DecentHologramDisplay;
+import com.alpsbte.alpslib.hologram.DecentHologramDisplay;
 import com.alpsbte.alpslib.utils.AlpsUtils;
-import eu.decentsoftware.holograms.api.holograms.Hologram;
+import com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils;
 import eu.decentsoftware.holograms.api.holograms.HologramLine;
 import eu.decentsoftware.holograms.event.HologramClickEvent;
 import org.bukkit.Location;
@@ -61,9 +61,10 @@ public abstract class AbstractTutorialHologram extends DecentHologramDisplay {
 
     private final Vector vectorPos;
     private ClickAction markAsReadClickAction;
+    private boolean isMarkAsReadClicked = false;
 
-    public AbstractTutorialHologram(Player player, int holoId, String content, int readMoreId) {
-        super(String.valueOf(holoId), null, true);
+    public AbstractTutorialHologram(Player player, int tutorialId, int holoId, String content, int readMoreId) {
+        super("ps-tutorial-" + tutorialId + "-" + holoId, null, true);
         this.holoId = holoId;
         this.player = player;
         this.content = content;
@@ -75,12 +76,14 @@ public abstract class AbstractTutorialHologram extends DecentHologramDisplay {
 
     /**
      * Gets the hologram title in the header
+     *
      * @return formatted title
      */
     protected abstract String getTitle();
 
     /**
      * The text which is displayed on the hologram to read more.
+     *
      * @return formatted read more text
      */
     protected abstract String getReadMoreActionText();
@@ -92,15 +95,17 @@ public abstract class AbstractTutorialHologram extends DecentHologramDisplay {
 
     /**
      * The text which is displayed on the hologram to mark it as read.
+     *
      * @return formatted text
      */
     protected abstract String getMarkAsReadActionText();
 
     /**
      * The text which is displayed after the player marked the hologram as read.
+     *
      * @return formatted text
      */
-    protected abstract String getMarkAsReadActionDoneText();
+    protected abstract String getMarkAsReadClickedActionText();
 
     @Override
     public void create(Player player) {
@@ -141,32 +146,30 @@ public abstract class AbstractTutorialHologram extends DecentHologramDisplay {
         List<DataLine<?>> lines = new ArrayList<>();
         lines.add(new TextLine(EMPTY_TAG));
         if (readMoreId != -1) lines.add(new TextLine(getReadMoreActionText()));
-        if (markAsReadClickAction != null) {
-            if (readMoreId != -1) lines.add(new TextLine(EMPTY_TAG));
-            lines.add(new TextLine(getMarkAsReadActionText()));
-        }
+        if (markAsReadClickAction != null) lines.add(new TextLine(getMarkAsReadActionText()));
         return lines;
     }
 
-    public void setMarkAsReadClickAction(ClickAction action) {
-        markAsReadClickAction = action;
+    public void setMarkAsReadClickAction(ClickAction clickAction) {
+        markAsReadClickAction = clickAction;
     }
 
     @Override
     public void reload(UUID playerUUID) {
         super.reload(playerUUID);
 
-        // Set click listener
-        Hologram holo = this.getHologram(playerUUID);
-
-        if (readMoreId != -1)  super.setClickListener((clickEvent) -> handleReadMoreClickAction());
-        if (markAsReadClickAction != null) {
-            HologramLine line = holo.getPage(0).getLines().get(holo.getPage(0).getLines().size() - 1);
-            super.setClickListener((clickEvent) -> {
-                line.setText(getMarkAsReadActionDoneText());
+        // Add click event for tutorial hologram
+        if (readMoreId == -1 && markAsReadClickAction == null) return;
+        setClickListener(clickEvent -> {
+            if (!isMarkAsReadClicked && markAsReadClickAction != null) {
+                HologramLine line = clickEvent.getPage().getLines().getLast();
+                line.setText(getMarkAsReadClickedActionText());
+                clickEvent.getHologram().update(player);
                 markAsReadClickAction.onClick(clickEvent);
-            });
-        }
+                isMarkAsReadClicked = true;
+            }
+            if (readMoreId != -1) handleReadMoreClickAction();
+        });
     }
 
     protected String getReadMoreLink() {
